--- a/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.UI/Controls/Registrator/RegDoctorTable.xaml
@@ -6,7 +6,8 @@
 			 xmlns:local="clr-namespace:Hospital.UI.Controls.Registrator"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:vm="clr-namespace:Hospital.UI.ViewModels.RegistratorViewModel"
-			 mc:Ignorable="d" 
+			 mc:Ignorable="d"
+             x:Name="DoctorControl"
 			 d:DesignHeight="450" d:DesignWidth="800">
 
     <!--<UserControl.DataContext>
@@ -15,7 +16,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="35"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0" Background="{DynamicResource BrushPrimaryPanel}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,2,0,0"/>
