--- a/Hospital.UI/Views/Main.xaml
+++ b/Hospital.UI/Views/Main.xaml
@@ -1,4 +1,5 @@
 ﻿<mah:MetroWindow x:Class="Hospital.UI.Views.Main"
+                 x:Name="MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -21,11 +22,11 @@
 	<mah:MetroWindow.LeftWindowCommands>
 		<mah:WindowCommands ShowLastSeparator="False" >
 			<StackPanel Orientation="Horizontal">
-				<Button Content="menu" Command="{Binding CreateData}"/>
+				<Button Content="menu"/>
 				<ListBox Foreground="{DynamicResource MahApps.Brushes.Gray}" Cursor="Hand"
 						 VerticalAlignment="Bottom"
-						 ItemsSource="{Binding Pages}"
-						 SelectedItem="{Binding CurrentPage}"
+						 ItemsSource="{Binding Pages, ElementName=MainWindow}"
+						 SelectedItem="{Binding CurrentPage, ElementName=MainWindow}"
 						 ItemContainerStyle="{StaticResource TitleListBoxItem}"
 						 Background="Transparent">
 					<ListBox.ItemsPanel>
@@ -45,7 +46,7 @@
 	</mah:MetroWindow.LeftWindowCommands>
 
 	<Grid>
-		<ContentControl Content="{Binding CurrentPage}"/>
+		<ContentControl Content="{Binding CurrentPage, ElementName=MainWindow}"/>
         <Border BorderThickness="0,1,0,0" VerticalAlignment="Top" BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
     </Grid>
 </mah:MetroWindow>
