--- a/Hospital.UI/Views/Registrator.xaml
+++ b/Hospital.UI/Views/Registrator.xaml
@@ -6,23 +6,33 @@
       xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
       xmlns:local="clr-namespace:Hospital.UI.Views"
       xmlns:vm="clr-namespace:Hospital.UI.ViewModels.RegistratorViewModel"
-      xmlns:searchBar="clr-namespace:Hospital.UI.Controls.Registrator"
+      xmlns:controls="clr-namespace:Hospital.UI.Controls.Registrator"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800" >
-
+      d:DesignHeight="600" d:DesignWidth="1280">
     <UserControl.DataContext>
         <vm:RegistratorViewModel/>
     </UserControl.DataContext>
 
-    <Grid MinWidth="1080" MaxWidth="1400" HorizontalAlignment="Stretch" Margin="20,0">
+
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="150"/>
+            <RowDefinition Height="90"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
-        <searchBar:RegSearchBar Grid.Row="0"/>
-        <mah:TransitioningContentControl Grid.Row="1"/>
-        <mah:TransitioningContentControl Content="{Binding CurrentRegTable}" Grid.Row="2"/>
+        <Border Grid.Row="0" Background="{DynamicResource  BrushPrimaryPanel}" Effect="{StaticResource  EffectShadowDown}"/>
+        <Grid Grid.RowSpan="2" MinWidth="1080" MaxWidth="1400" HorizontalAlignment="Stretch" Margin="20,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="90"/>
+                <RowDefinition/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+
+            <controls:RegSearchBar Grid.Row="0"/>
+            <mah:TransitioningContentControl Grid.Row="1" Margin="0,20">
+                <controls:RegDoctorTable/>
+            </mah:TransitioningContentControl>
+
+
+        </Grid>
     </Grid>
 </UserControl>
