--- a/Hospital.UI/Controls/Registrator/RegSearchBar.xaml
+++ b/Hospital.UI/Controls/Registrator/RegSearchBar.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.UI.Controls.Registrator"
+             xmlns:view="clr-namespace:Hospital.UI.Views"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
@@ -27,6 +28,9 @@
                  VerticalContentAlignment="Center" FontSize="15" Padding="30,0" BorderThickness="2,2,0,2">
             <TextBox.InputBindings>
                 <KeyBinding Key="Enter" Command="{Binding FindByString}"/>
+                <KeyBinding Key="Enter" Command="{Binding Re}"
+                            CommandParameter="{x:Type local:RegDoctorTable}"
+                            CommandTarget="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type view:Registrator}}}"/>
             </TextBox.InputBindings>
             <TextBox.Style>
                 <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource MahApps.Styles.TextBox}">
@@ -110,6 +114,5 @@
         </ListBox>
 
         <Button Grid.Row="1" Grid.Column="1" Style="{StaticResource RegistratorSearchBarButton}" Width="120" Content="ПОИСК" Command="{Binding FindByString}"/>
-
     </Grid>
 </UserControl>
