--- a/Hospital.UI/Views/Registrator.xaml
+++ b/Hospital.UI/Views/Registrator.xaml
@@ -1,18 +1,14 @@
 ﻿<UserControl x:Class="Hospital.UI.Views.Registrator"
+             x:Name="RegistratorView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
       xmlns:local="clr-namespace:Hospital.UI.Views"
-      xmlns:vm="clr-namespace:Hospital.UI.ViewModels.RegistratorViewModel"
       xmlns:controls="clr-namespace:Hospital.UI.Controls.Registrator"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="1280">
-    <UserControl.DataContext>
-        <vm:RegistratorViewModel/>
-    </UserControl.DataContext>
-
 
     <Grid>
         <Grid.RowDefinitions>
@@ -28,10 +24,9 @@
             </Grid.RowDefinitions>
 
             <controls:RegSearchBar Grid.Row="0"/>
-            <mah:TransitioningContentControl Grid.Row="1" Margin="0,20">
-                <controls:RegDoctorTable/>
-            </mah:TransitioningContentControl>
-
+            
+            <mah:TransitioningContentControl Grid.Row="1" Margin="0,20"
+                                             Content="{Binding ElementName=RegistratorView, Path=CurrentControl}"/>
 
         </Grid>
     </Grid>
