--- a/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
@@ -6,7 +6,6 @@
 			 xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:view="clr-namespace:Hospital.WPF.Views"
-             xmlns:ser="clr-namespace:Hospital.WPF.Services"
 			 mc:Ignorable="d"
              x:Name="DoctorControl"
 			 d:DesignHeight="450" d:DesignWidth="800">
@@ -20,23 +19,48 @@
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Doctors}" Style="{StaticResource TableCommon}" ColumnWidth="*" >
             <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick">
+                <MouseBinding MouseAction="LeftDoubleClick" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}">
                     <MouseBinding.Command>
-                        <MultiBinding Converter="{StaticResource MultiCommandConverter}">
+                        <MultiBinding Converter="{StaticResource MultiCommandConverter}"> 
                             <Binding Path="SelectEntry"/>
-                            <Binding Path="SetBody" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type view:Registrator}}"/>
+                            <Binding Path="SetEntry" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
                         </MultiBinding>
                     </MouseBinding.Command>
-                    <MouseBinding.CommandParameter>
-                        <Binding Path="SelectedItem" RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}"/>
-                    </MouseBinding.CommandParameter>
                 </MouseBinding>
-                <!--<MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectEntry}" 
-                              CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}" />
-                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type view:Registrator}}, Path=SetBody}"/>-->
-                <KeyBinding Key="Enter" Command="{Binding SelectEntry}" 
-                            CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=SelectedItem}"/>
             </DataGrid.InputBindings>
+            
+            <DataGrid.CellStyle>
+                <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
+                    <Style.Triggers>
+                        <DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource ObjectEqualsToBoolConverter}">
+                                    <Binding />
+                                    <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}" Path="DataContext.SelectedEntry"/>
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+                            <Setter Property="Foreground" Value="{StaticResource BrushBackgroundPaper}"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource BrushTableSelected}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.CellStyle>
+            <DataGrid.RowStyle>
+                <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource TableRow}">
+                    <Style.Triggers>
+                        <DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource ObjectEqualsToBoolConverter}">
+                                    <Binding/>
+                                    <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}" Path="DataContext.SelectedEntry"/>
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+                            <Setter Property="Background" Value="{StaticResource BrushTableSelected}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.RowStyle>
+
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='dd/MM'}" Header="ДАТА" Width="Auto" />
                 <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='HH:mm'}" Header="ВРЕМЯ" Width="Auto"/>
