--- a/Hospital.WPF/Controls/Registrator/RegSearchBar.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegSearchBar.xaml
@@ -1,18 +1,23 @@
 ﻿<UserControl x:Class="Hospital.WPF.Controls.Registrator.RegSearchBar"
+             x:Name="RegistratorSearchBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
              xmlns:view="clr-namespace:Hospital.WPF.Views"
+             xmlns:ser="clr-namespace:Hospital.WPF.Services"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="74.049" d:DesignWidth="1080">
 
     <UserControl.Resources>
         <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource RegistratorSearchTab}"/>
+        <ser:SearchLocatorConverter x:Key="SearchConverter"/>
     </UserControl.Resources>
+
 
     <Grid Margin="0,5" Height="35">
         <Grid.ColumnDefinitions>
@@ -21,14 +26,11 @@
         </Grid.ColumnDefinitions>
 
         <TextBox Grid.Column="0" Text="{Binding SearchValue, UpdateSourceTrigger=PropertyChanged}"
-                 x:Name="TextBoxSearch"
+                 x:Name="TextBoxSearch" 
                  mah:TextBoxHelper.SelectAllOnFocus="True"
                  mah:TextBoxHelper.Watermark="Поиск..."
                  mah:ControlsHelper.CornerRadius="2,0,0,2"
                  VerticalContentAlignment="Center" FontSize="15" Padding="30,0" BorderThickness="2,2,0,2">
-            <TextBox.InputBindings>
-                <KeyBinding Key="Enter" Command="{Binding FindByString}"/>
-            </TextBox.InputBindings>
             <TextBox.Style>
                 <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource MahApps.Styles.TextBox}">
                     <Setter Property="BorderBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
@@ -44,6 +46,25 @@
                     </Style.Triggers>
                 </Style>
             </TextBox.Style>
+            <i:Interaction.Triggers>
+                <i:DataTrigger Binding="{Binding ElementName=TabDoctor, Path=IsSelected}" Value="True">
+                    <i:InvokeCommandAction Command="{Binding Path=SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"/>
+                </i:DataTrigger>
+                <i:DataTrigger Binding="{Binding ElementName=TabPatient, Path=IsSelected}" Value="True">
+                    <i:InvokeCommandAction Command="{Binding Path=SetPatient, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"/>
+                </i:DataTrigger>
+            </i:Interaction.Triggers>
+            <TextBox.InputBindings>
+                <KeyBinding Key="Enter">
+                    <KeyBinding.Command>
+                        <MultiBinding Converter="{StaticResource SearchConverter}">
+                            <Binding Path="SelectedIndex" ElementName="TabSearch"/>
+                            <Binding Path="FindDoctor"/>
+                            <Binding Path="FindPatient"/>
+                        </MultiBinding>
+                    </KeyBinding.Command>
+                </KeyBinding>
+            </TextBox.InputBindings>
         </TextBox>
 
         <CheckBox Content="{iconPacks:Material Kind=FilterOutline, Height=18}" IsEnabled="{Binding ElementName=TabDoctor, Path=IsSelected}" Margin="4" Padding="6,0" HorizontalAlignment="Left" Name="SearchBarPopupButton">
@@ -85,7 +106,7 @@
             <Border Background="Red" Width="100" Height="100"/>
         </Popup>
 
-        <ListBox Grid.Column="0" HorizontalAlignment="Right" Margin="0,4" FontWeight="Bold" Background="{StaticResource BrushBackgroundPaper}">
+        <ListBox Grid.Column="0" HorizontalAlignment="Right" x:Name="TabSearch" Margin="0,4" FontWeight="Bold" Background="{StaticResource BrushBackgroundPaper}">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal"/>
@@ -110,6 +131,14 @@
             </ListBoxItem>
         </ListBox>
 
-        <Button Grid.Row="1" Grid.Column="1" Style="{StaticResource RegistratorSearchBarButton}" Width="120" Content="ПОИСК" Command="{Binding FindByString}"/>
+        <Button Grid.Row="1" Grid.Column="1" Width="120" Content="ПОИСК" x:Name="ButtonSearch" Style="{StaticResource RegistratorSearchBarButton}">
+            <Button.Command>
+                <MultiBinding Converter="{StaticResource SearchConverter}">
+                    <Binding Path="SelectedIndex" ElementName="TabSearch"/>
+                    <Binding Path="FindDoctor"/>
+                    <Binding Path="FindPatient"/>
+                </MultiBinding>
+            </Button.Command>
+        </Button>
     </Grid>
 </UserControl>
