--- a/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
@@ -5,8 +5,8 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:view="clr-namespace:Hospital.WPF.Views"
-			 mc:Ignorable="d"
+             xmlns:view="clr-namespace:Hospital.WPF.Views" xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+             mc:Ignorable="d"
              x:Name="DoctorControl"
 			 d:DesignHeight="450" d:DesignWidth="800">
 
@@ -18,16 +18,12 @@
         <Border Grid.Row="0" Background="{DynamicResource BrushPrimaryPanel}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,2,0,0"/>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Doctors}" Style="{StaticResource TableCommon}" ColumnWidth="*" >
-            <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}">
-                    <MouseBinding.Command>
-                        <MultiBinding Converter="{StaticResource MultiCommandConverter}"> 
-                            <Binding Path="SelectEntry"/>
-                            <Binding Path="SetEntry" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
-                        </MultiBinding>
-                    </MouseBinding.Command>
-                </MouseBinding>
-            </DataGrid.InputBindings>
+            <b:Interaction.Triggers>
+                <b:EventTrigger EventName="MouseDoubleClick">
+                    <b:InvokeCommandAction Command="{Binding SelectEntry}" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"/>
+                    <b:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=SetBody}" CommandParameter="Entry"/>
+                </b:EventTrigger>
+            </b:Interaction.Triggers> 
             
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
