--- a/Hospital.WPF/Controls/Registrator/RegEntryTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegEntryTable.xaml
@@ -7,7 +7,7 @@
              xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
              mc:Ignorable="d" 
-             xmlns:services="clr-namespace:Hospital.WPF.Services"
+             xmlns:services="clr-namespace:Hospital.WPF.Services" xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
@@ -23,23 +23,21 @@
             
             <Border Grid.Row="0" Background="{StaticResource BrushBackgroundPaper}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,0,0,2"/>
             <StackPanel Orientation="Horizontal" Grid.Row="0">
-                <Button Content="Back" Command="{Binding Path=SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"/>
+                <Button Content="Back" Command="{Binding Path=SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}" CommandParameter="Doctor"/>
             </StackPanel>
-            
-            <DataGrid Grid.Row="1" ItemsSource="{Binding Entries}" Style="{StaticResource TableCommon}" ColumnWidth="*">
 
+            <DataGrid Grid.Row="1" ItemsSource="{Binding Entries}" Style="{StaticResource TableCommon}" ColumnWidth="*">
                 <DataGrid.InputBindings>
-                    <MouseBinding MouseAction="LeftDoubleClick" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}" >
+                    <MouseBinding MouseAction="LeftDoubleClick" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}">
                         <MouseBinding.Command>
-                            <MultiBinding  Converter="{StaticResource MultiCommandConverter}">
+                            <MultiBinding Converter="{StaticResource MultiCommandConverter}">
+                                <Binding RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}" Path="SetFocusPatient"/>
                                 <Binding Path="SelectEntry"/>
-                                <Binding Path="FocusSearchPatient" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
-                                <Binding Path="SetPatient" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
                             </MultiBinding>
                         </MouseBinding.Command>
+                        
                     </MouseBinding>
                 </DataGrid.InputBindings>
-
                 <DataGrid.RowStyle>
                     <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource TableRow}">
                         <Style.Triggers>
@@ -76,7 +74,6 @@
                         </Style.Triggers>
                     </Style>
                 </DataGrid.CellStyle>
-
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="ДАТА" Binding="{Binding TargetDateTime, StringFormat='dd/MM'}" Width="Auto"/>
                     <DataGridTextColumn Header="ВРЕМЯ" Binding="{Binding TargetDateTime, StringFormat='HH:mm'}" Width="Auto"/>
