--- a/Hospital.WPF/Views/Registrator.xaml
+++ b/Hospital.WPF/Views/Registrator.xaml
@@ -24,7 +24,7 @@
         <Grid Grid.RowSpan="2" MinWidth="1080" MaxWidth="1400" HorizontalAlignment="Stretch" Margin="20,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="90"/>
-                <RowDefinition Height="180"/>
+                <RowDefinition Height="190"/>
                 <RowDefinition/>
                 <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
@@ -37,9 +37,11 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="{Binding SelectedEntry.DoctorDestination.FirstName}" Grid.Column="0"/>
-                <TextBlock Text="{Binding SelectedPatient.FirstName}" Grid.Column="1"/>
-                <TextBlock Text="{Binding SelectedEntry.TargetDateTime}" Grid.Column="2"/>
+                <mah:TransitioningContentControl Grid.Column="0" Margin="0,25,10,25" Transition="Right">
+                    <controls:RegDoctorCards/>
+                </mah:TransitioningContentControl>
+                <controls:RegPatientCard Grid.Column="1" Margin="10,25"/>
+                <controls:RegEntryCard Grid.Column="2" Margin="10,25,0,25"/>
 
             </Grid>
 
