--- a/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
@@ -18,12 +18,16 @@
         <Border Grid.Row="0" Background="{DynamicResource BrushPrimaryPanel}" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,2,0,0"/>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Doctors}" Style="{StaticResource TableCommon}" ColumnWidth="*" >
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="MouseDoubleClick">
-                    <b:InvokeCommandAction Command="{Binding SelectEntry}" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"/>
-                    <b:InvokeCommandAction Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=SetBody}" CommandParameter="Entry"/>
-                </b:EventTrigger>
-            </b:Interaction.Triggers> 
+            <DataGrid.InputBindings>
+                <MouseBinding MouseAction="LeftDoubleClick" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}">
+                    <MouseBinding.Command>
+                        <MultiBinding Converter="{StaticResource MultiCommandConverter}">
+                            <Binding Path="SelectEntry"/>
+                            <Binding Path="SetEntry" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
+                        </MultiBinding>
+                    </MouseBinding.Command>
+                </MouseBinding>
+            </DataGrid.InputBindings>
             
             <DataGrid.CellStyle>
                 <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
@@ -56,7 +60,6 @@
                     </Style.Triggers>
                 </Style>
             </DataGrid.RowStyle>
-
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='dd/MM'}" Header="ДАТА" Width="Auto" />
                 <DataGridTextColumn Binding="{Binding TargetDateTime, StringFormat='HH:mm'}" Header="ВРЕМЯ" Width="Auto"/>
