--- a/Hospital.WPF/Controls/Registrator/RegEntryCard.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegEntryCard.xaml
@@ -57,6 +57,6 @@
 
         <TextBlock Grid.Column="1" VerticalAlignment="Bottom" HorizontalAlignment="Left" Text="{Binding SelectedEntry.TargetDateTime, StringFormat=HH:mm}" FontSize="30" Margin="10,5"/>
 
-        <Button Content="РЕДАКТИРОВАТЬ" FontSize="15" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Style="{StaticResource MahApps.Styles.Button.ToolBar}"/>
+        <Button Content="СОХРАНИТЬ" FontSize="15" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Style="{StaticResource MahApps.Styles.Button.ToolBar}"/>
     </Grid>
 </UserControl>
