--- a/Hospital.WPF/Controls/Registrator/RegPatientTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegPatientTable.xaml
@@ -6,7 +6,6 @@
              xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
@@ -19,18 +18,17 @@
         <Border Grid.Row="0" Background="{StaticResource BrushBackgroundPaper}" BorderBrush="{StaticResource BrushPrimaryBorderLight}" BorderThickness="0,1,0,0"/>
         <Border Grid.Row="0" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,0,0,2"/>
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
-            <Button Content="Фильтр" Command="{Binding Path=SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}" CommandParameter="Entry"/>
+            <Button Content="Фильтр" Command="{Binding Path=SetEntry, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right">
-            <Button Content="РЕГИСТРАЦИЯ" Grid.Row="0" HorizontalAlignment="Right" Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=SetBody}" CommandParameter="Edit"/>
+            <Button Content="РЕГИСТРАЦИЯ" Grid.Row="0" HorizontalAlignment="Right" Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=SetEdit}"/>
         </StackPanel>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Patients}" Style="{StaticResource TableCommon}">
-            <b:Interaction.Triggers>
-                <b:EventTrigger EventName="MouseDoubleClick">
-                    <b:InvokeCommandAction Command="{Binding SelectPatient}" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"/>
-                </b:EventTrigger>
-            </b:Interaction.Triggers>
+            <DataGrid.InputBindings>
+                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectPatient}"
+                              CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"/>
+            </DataGrid.InputBindings>
             
             <DataGrid.RowStyle>
                 <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource TableRow}">
