--- a/Hospital.WPF/Resources/Dictionary.xaml
+++ b/Hospital.WPF/Resources/Dictionary.xaml
@@ -6,6 +6,7 @@
     <ser:ToUpperCaseConverter x:Key="ToUpperCaseConverter"/>
     <ser:ObjectEqualsToBoolConverter x:Key="ObjectEqualsToBoolConverter"/>
     <ser:MultiCommandConverter x:Key="MultiCommandConverter"/>
+    <ser:MultiCommandExecuter x:Key="MultiCommandExecuter"/>
 
     <Style TargetType="ListBoxItem" x:Key="TitleListBoxItem">
         <Setter Property="Background" Value="Transparent"/>
