--- a/Hospital.WPF/Controls/Registrator/RegDoctorCards.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorCards.xaml
@@ -1,6 +1,8 @@
 ﻿<UserControl x:Class="Hospital.WPF.Controls.Registrator.RegDoctorCards"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Registrator"
@@ -19,7 +21,11 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Border Background="{DynamicResource BrushBackgroundPaper}" Grid.ColumnSpan="2" Effect="{StaticResource ShadowCard}" CornerRadius="2" />
-        <Border Background="{StaticResource BrushAccent1}" Grid.Column="0" CornerRadius="2,0,0,2" />
+        <Button Background="{StaticResource BrushAccent1}" Grid.Column="0" BorderThickness="0"
+                mah:ControlsHelper.CornerRadius="2,0,0,2"
+                mah:ControlsHelper.FocusBorderThickness="0"
+                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.SetBodyCommand}"
+                    CommandParameter="Doctors"/>
         <TextBlock Text="Д О К Т О Р" FontSize="12"  Foreground="White" Margin="0,10" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
             <TextBlock.LayoutTransform>
                 <RotateTransform Angle="-90"/>
