--- a/Hospital.WPF/Controls/Registrator/RegDoctorCards.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorCards.xaml
@@ -24,7 +24,7 @@
         <Button Background="{StaticResource BrushAccent1}" Grid.Column="0" BorderThickness="0"
                 mah:ControlsHelper.CornerRadius="2,0,0,2"
                 mah:ControlsHelper.FocusBorderThickness="0"
-                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.SetBodyCommand}"
+                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.SetBody}"
                     CommandParameter="Doctors"/>
         <TextBlock Text="Д О К Т О Р" FontSize="12"  Foreground="White" Margin="0,10" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom">
             <TextBlock.LayoutTransform>
