--- a/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegDoctorTable.xaml
@@ -19,14 +19,9 @@
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Doctors}" Style="{StaticResource TableCommon}" ColumnWidth="*" >
             <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick" CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}">
-                    <MouseBinding.Command>
-                        <MultiBinding Converter="{StaticResource MultiCommandConverter}">
-                            <Binding Path="SelectEntry"/>
-                            <Binding Path="SetEntry" RelativeSource="{RelativeSource AncestorType={x:Type view:Registrator}}"/>
-                        </MultiBinding>
-                    </MouseBinding.Command>
-                </MouseBinding>
+                <MouseBinding MouseAction="LeftDoubleClick" 
+                              Command="{Binding Path=Command.GetEntries, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
+                              CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"/>
             </DataGrid.InputBindings>
             
             <DataGrid.CellStyle>
