--- a/Hospital.WPF/Controls/Registrator/RegPatientTable.xaml
+++ b/Hospital.WPF/Controls/Registrator/RegPatientTable.xaml
@@ -19,17 +19,20 @@
         <Border Grid.Row="0" Background="{StaticResource BrushBackgroundPaper}" BorderBrush="{StaticResource BrushPrimaryBorderLight}" BorderThickness="0,1,0,0"/>
         <Border Grid.Row="0" BorderBrush="{StaticResource BrushTableSelected}" BorderThickness="0,0,0,2"/>
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
-            <Button Content="Фильтр" Command="{Binding Path=SetEntry, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"/>
+            <Button Content="Back" 
+                    Command="{Binding Path=Command.SetBody, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
+                    CommandParameter="Entries"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Right">
             <Button Content="РЕГИСТРАЦИЯ" Grid.Row="0" HorizontalAlignment="Right"
-                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.SetBodyCommand}"
+                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}, Path=Command.SetBody}"
                     CommandParameter="Edit"/>
         </StackPanel>
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding Patients}" Style="{StaticResource TableCommon}">
             <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding SelectPatient}"
+                <MouseBinding MouseAction="LeftDoubleClick"
+                              Command="{Binding Path=Command.SelectPatient, RelativeSource={RelativeSource AncestorType={x:Type view:Registrator}}}"
                               CommandParameter="{Binding Path=SelectedItem, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"/>
             </DataGrid.InputBindings>
             
